syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message HeroBattleWaveSquadDto {
  int32 position = 1;
  oneof squad {
    HeroBattleWaveHeroDetailsDto hero = 2;
    HeroBattleWaveUnitSquadDetailsDto unit = 3;
  }
}

message HeroBattleWaveHeroDetailsDto {
  string id = 1;
  int32 level = 2;
  string ability_id = 4;
}

message HeroBattleWaveUnitSquadDetailsDto{
  string id = 1;
  int32 level = 2;
  HeroBattleWaveUnitSquadSizeDto stats = 5;
}

message HeroBattleWaveUnitSquadSizeDto {
  string id = 1;
  float value = 2;
}


