syntax = "proto3";

import "google/protobuf/any.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message HeroDefinitionDTO {
  string id = 1;
  string unit_id = 2;
  // GameDesignReference, HeroSupportUnitComponentDTO, HeroProgressionComponentDTO
  repeated google.protobuf.Any packed_components = 3;
}
